[SPARKTA-501] JVM arguments
Update sparta-variables