@@ -108,11 +108,7 @@
                                     <includeConfigurationDirectoryInClasspath>true
                                     </includeConfigurationDirectoryInClasspath>
                                     <assembleDirectory>target/appassembler</assembleDirectory>
-                                    <extraJvmArguments>$SPARTA_OPTS -Xms1024m -Xmx2048m -XX:MaxPermSize=512m
-                                        -Dcom.sun.management.jmxremote.port=7183
-                                        -Dcom.sun.management.jmxremote.authenticate=false
-                                        -Dcom.sun.management.jmxremote.ssl=false
-                                    </extraJvmArguments>
+                                    <extraJvmArguments>$SPARTA_OPTS</extraJvmArguments>
                                     <filterConfigurationDirectory>true</filterConfigurationDirectory>
                                     <programs>
                                         <program>
